# bazel-issue-sw

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
sw/: func.c  func.h
test/: test.c
