cc_library(
    name = "funclib",
    srcs = [
        "sw/func.c",
        "sw/func.h",
    ],
    hdrs = [],
    copts = [],
    defines = [],
    features = [],
    includes = [
        "sw",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [],
)

load(
    "@rules_cc//cc:defs.bzl",
    "cc_test",
)

cc_test(
    name = "mytest",
    srcs = [
        "test/test.c",
    ],
    deps = [
        "//:funclib",
    ],
)
